--- a/app/views/user_comments/index.html.erb
+++ b/app/views/user_comments/index.html.erb
@@ -10,7 +10,7 @@
 </p>
 <% end %>
 <% @user_comments.each do |i| %>
-<p>Comment from <%= i.ip_address%> at <%= i.created_at.strftime('%Y-%m-%d %H:%S')%><p>
+<p>Comment from <%= i.ip_address%> at <%= i.created_at.strftime('%Y-%m-%d %H:%M')%><p>
 <p><%= sanitize i.comment.html_safe %></p>	
 <!-- <p><%= i.comment.html_safe %></p> -->
 <% end %>
